canadensis_dsdl_frontend/tests/compile_fail/deprecated_in_non_deprecated/canadensis/Outer.0.1.dsdl

# Because this type is not deprecated, it cannot include a deprecated type
InnerDeprecated.0.1 inner

@sealed
